Adding feature that shows previously deleted todos after app is started