@@ -10,16 +10,24 @@ import android.content.Intent;
 import androidx.annotation.NonNull;
 import androidx.core.app.NotificationCompat;
 import androidx.core.app.NotificationManagerCompat;
+import androidx.lifecycle.ViewModelProvider;
 import androidx.work.Worker;
 import androidx.work.WorkerParameters;
 
 import pl.moras.model.AppDatabase;
 import pl.moras.model.ToDoEvent;
+import pl.moras.model.ToDoEventDao;
 import pl.moras.todoapplication.MainActivity;
 import pl.moras.todoapplication.R;
+import pl.moras.viewmodel.ToDoViewModel;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 
 public class NotifierWorker extends Worker {
@@ -35,14 +43,13 @@ public class NotifierWorker extends Worker {
     @NonNull
     @Override
     public Result doWork() {
-        ToDoEvent toDoEvent = AppDatabase.getDBInstance(getApplicationContext()).toDoEventDao().getFirst();
-        while (toDoEvent.getDatakoniec().isBefore(LocalDateTime.now())){
-            AppDatabase.getDBInstance(getApplicationContext()).toDoEventDao().delete(toDoEvent);
-            toDoEvent = AppDatabase.getDBInstance(getApplicationContext()).toDoEventDao().getFirst();
-        }
+        ToDoEventDao toDoEventDao = AppDatabase.getDBInstance(getApplicationContext()).toDoEventDao();
+        List<ToDoEvent> toDoEventList = toDoEventDao.getList();
+        deleteOldTodos(toDoEventDao, toDoEventList);
+        ToDoEvent firstTodo = toDoEventList.get(0);
         enableChannel();
         NotificationManagerCompat notificationManagerCompat = NotificationManagerCompat.from(getApplicationContext());
-        notificationManagerCompat.notify(NOTIFICATION_ID, notifier(toDoEvent));
+        notificationManagerCompat.notify(NOTIFICATION_ID, notifier(firstTodo));
         return Result.success();
     }
 
@@ -60,9 +67,22 @@ public class NotifierWorker extends Worker {
                 .setSmallIcon(R.drawable.options_button)
                 .setContentIntent(PendingIntent.getActivity(getApplicationContext(), 1, intent, PendingIntent.FLAG_UPDATE_CURRENT))
                 .setContentTitle(getApplicationContext().getString(R.string.notifier_reminder_title))
-                .setContentText(getApplicationContext().getString(R.string.notfier_reminder_text, toDoEvent.getOpis(), convertDate(toDoEvent.getDatakoniec())))
+                .setContentText(getApplicationContext().getString(R.string.notifier_reminder_text, toDoEvent.getOpis(), convertDate(toDoEvent.getDatakoniec())))
                 .setPriority(NotificationCompat.PRIORITY_DEFAULT);
         return notificationBuilder.build();
+    }
+
+    private void deleteOldTodos(ToDoEventDao toDoEventDao, List<ToDoEvent> list){
+        Set<ToDoEvent> deletedTodos = new HashSet<>();
+        for(ToDoEvent toDoEvent: list){
+            if (toDoEvent.getDatakoniec().isBefore(LocalDateTime.now())){
+                deletedTodos.add(toDoEvent);
+                toDoEventDao.delete(toDoEvent);
+                list.remove(toDoEvent);
+            }
+        }
+        if (!deletedTodos.isEmpty())
+            new NotifierOptions(getApplicationContext()).cacheDeletedTodos(deletedTodos);
     }
 
     private String convertDate(LocalDateTime localDateTime){
